kubernetes/main/apps/cicd/blog/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: build-weblog
spec:
  hostnames:
    - build-weblog-trigger.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: el-build-weblog
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
